# batalign

./: BWT.c  Makefile  Makefile.am  Makefile.in  README.md  batlib.cpp  batlib.h  command-s.cpp  command.cpp  command.h  common.h  config.h  config.status  configure  configure.in  fastsw-s.cpp  filters.cpp  global.h  map-s.cpp  penguin-s.cpp  penguin.cpp  print-s.cpp  print.cpp  ssw.c  swroutines-s.cpp  swroutines.cpp  swroutines.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
scripts/: Makefile  Makefile.in  build_indexX
src/: BWT.c  BWTConstruct.c  Makefile  Makefile.am  Makefile.in  TextConverter.c  batalign  batlib-l.cpp  batlib-l.h  batlib-s.cpp  batlib-s.h  batlib.cpp  command-l.cpp  command-l.h  command-s.cpp  command-s.h  command.cpp  common-l.h  common-s.h  common.h  fastsw-l.cpp  fastsw-l.h  fastsw-s.cpp  fastsw-s.h  fastsw.cpp  fastsw.h  filters-l.cpp  filters-s.cpp  global-l.h  global-s.h  global.h  map-l.cpp  map-s.cpp  map-s.h  penguin-l.cpp  penguin-s.cpp  penguin.cpp  print-l.cpp  print-l.h  print-s.h  (+17 more)
src/.deps/: BWT.Po  DNACount.Po  HSP.Po  MemManager.Po  MiscUtilities.Po  QSufSort.Po  Socket.Po  TextConverter.Po  batlib.Po  command.Po  fastsw.Po  filters.Po  index.Po  map.Po  penguin.Po  print.Po  rqindex.Po  swroutines.Po  utils.Po
